<?xml version="1.0"?>
<package format="2">
    <name>livox_laser_simulation</name>
    <version>0.0.0</version>
    <description>The livox_laser_simulation package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="lfc@todo.todo">lfc</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>tf</build_depend>
    <build_export_depend>tf</build_export_depend>
    <exec_depend>tf</exec_depend>
    <build_depend>wa_ros_msgs</build_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
